--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "peerDependencies": {
     "prop-types": "*",
     "react": "*",
-    "react-native": "*",
-    "react-native-windows": "0.41.0-rc.1"
+    "react-native": "*"
   },
   "dependencies": {
     "link-preview-js": "2.0.4"
